@@ -7,8 +7,69 @@ import taskflow.engines
 from taskflow.patterns import linear_flow
 
 from cosmos.common import flow_utils
+from cosmos import objects
 
 ACTION = 'model:predict'
+
+
+class ExtractRequestTask(flow_utils.CosmosTask):
+    """Extract Request Task."""
+
+    def __init__(self):
+        requires = ['context']
+        super(ExtractRequestTask, self).__init__(addons=[ACTION],
+                                                 requires=requires)
+
+    def execute(self, context, request_spec, *args, **kwargs):
+        pass
+
+    def revert(self, result, *args, **kwargs):
+        pass
+
+
+class QuotaReserveTask(flow_utils.CosmosTask):
+    """Quota Reserve Task."""
+
+    def __init__(self):
+        requires = ['context']
+        super(QuotaReserveTask, self).__init__(addons=[ACTION],
+                                               requires=requires)
+
+    def execute(self, context, request_spec, *args, **kwargs):
+        pass
+
+    def revert(self, result, *args, **kwargs):
+        pass
+
+
+class EntryCreateTask(flow_utils.CosmosTask):
+    """Entry Create Task."""
+
+    def __init__(self):
+        requires = ['context']
+        super(EntryCreateTask, self).__init__(addons=[ACTION],
+                                              requires=requires)
+
+    def execute(self, context, request_spec, *args, **kwargs):
+        pass
+
+    def revert(self, result, *args, **kwargs):
+        pass
+
+
+class QuotaCommitTask(flow_utils.CosmosTask):
+    """Quota Commit Task."""
+
+    def __init__(self):
+        requires = ['context']
+        super(QuotaCommitTask, self).__init__(addons=[ACTION],
+                                              requires=requires)
+
+    def execute(self, context, request_spec, *args, **kwargs):
+        pass
+
+    def revert(self, result, *args, **kwargs):
+        pass
 
 
 class PredictTask(flow_utils.CosmosTask):
@@ -41,7 +102,11 @@ def get_flow(context, manager, request_spec):
         'request_spec': request_spec,
     }
 
-    predict_flow.add(PredictTask(manager.driver))
+    predict_flow.add(ExtractRequestTask(),
+                     QuotaReserveTask(),
+                     EntryCreateTask(),
+                     QuotaCommitTask(),
+                     PredictTask(manager.driver))
 
     # Now load (but do not run) the flow using the provided initial data.
     return taskflow.engines.load(predict_flow, store=predict_what)
